Revert to JDK 8
Use JDK 8
Continue working on plugin for Protege

Signed-off-by: Cody D'Ambrosio <cjd218@lehigh.edu>