@@ -6,18 +6,23 @@
 # run CsvToRdf application        #
 # in linux environment.           #
 #                                 #
-# NOTE: Java 9 or later required! #
-#                                 #
 ###################################
 package="csvtordf"
-exe="CsvToRdf"
-javafxmods="controls"
+exe="${package}.main.CsvWizard"
 
-srcdir="$(cd $(dirname ${BASH_SOURCE[0]}) && pwd)/src"
+# Need to be in directory
+wdir="$(cd $(dirname ${BASH_SOURCE[0]}) && pwd)"
+cd $wdir
+srcdir="src"
+libdir="lib"
 
-export CLASSPATH="lib/*:${srcdir}"
+if [[ "$OSTYPE" == "linux-gnu" ]]; then
+  export CLASSPATH="${libdir}/*:${srcdir}"
+else
+  export CLASSPATH="${libdir}/*;${srcdir}"
+fi
+
 echo "CLASSPATH=${CLASSPATH}"
-MODULEPATH="lib"
 
 # clean
 echo "Cleaning ${srcdir}/${package}"
@@ -25,17 +30,14 @@ rm -rf ${srcdir}/${package}/*/*.class
 
 # build
 echo "Building ${package}/*.java"
-modules=""
-for module in ${javafxmods}; do
-    modules="javafx.${module} ${modules}"
-done
-javac --module-path ${MODULEPATH} --add-modules ${modules} ${srcdir}/${package}/main/*.java
+shopt -s extglob
+javac ${srcdir}/${package}/main/!(CsvPlugin).java
 res=$?
 if [ ${res} -ne 0 ]; then
     exit ${res}
 fi
 
-# run
+# test
 echo "Build Complete! Testing..."
 echo "---------------------------------------------"
 javac ${srcdir}/${package}/test/*.java
@@ -45,14 +47,10 @@ if [ ${res} -ne 0 ]; then
     exit ${res}
 fi
 
+# run
 echo "Testing Complete! Running..."
 echo "---------------------------------------------"
-
-#TODO this should eventually be combined into a single graphical app
-#Command line
-#java --module-path ${MODULEPATH} --add-modules ${modules} -Dprism.order=sw ${package}.main.${exe} ${appargs}
-#GUI
-java --module-path ${MODULEPATH} --add-modules ${modules} -Dprism.order=sw ${package}.main.CsvWizard ${appargs}
+java -Dprism.order=sw ${exe}
 res=$?
 
 exit ${res}
